// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<span
  aria-describedby="help-tip"
  class="wp-components-view css-87039i"
  data-g2-c16t="true"
  data-g2-component="View"
  tabindex="0"
>
  <div
    class="wp-components-icon css-103gddu"
    data-g2-c16t="true"
    data-g2-component="Icon"
  >
    <svg
      fill="none"
      height="14"
      size="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="17"
      />
    </svg>
  </div>
</span>
`;

exports[`props should render iconSize 1`] = `
<span
  aria-describedby="help-tip"
  class="wp-components-view css-87039i"
  data-g2-c16t="true"
  data-g2-component="View"
  tabindex="0"
>
  <div
    class="wp-components-icon css-1a3oz8"
    data-g2-c16t="true"
    data-g2-component="Icon"
  >
    <svg
      fill="none"
      height="13"
      size="13"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="17"
      />
    </svg>
  </div>
</span>
`;
